--- a/man/man8/srczap.8
+++ b/man/man8/srczap.8
@@ -3,7 +3,7 @@
 .Os
 .Sh NAME
 .Nm srczap
-.Nd manages a copy of the HardenedBSD source code
+.Nd manages a copy of the HardenedBSD source tree
 .Sh SYNOPSIS
 .br
 srczap clone
@@ -15,7 +15,7 @@ srczap install
 srczap erase
 .Sh DESCRIPTION
 .Nm srczap
-manages a copy of the HardenedBSD source code.
+manages a copy of the HardenedBSD source tree.
 The copy of the source tree is maintained by members of
 the '_srczap' group, and a copy of the source tree
 can be installed to /usr/src/ by root.
