--- a/man/man8/srczap.8
+++ b/man/man8/srczap.8
@@ -18,7 +18,7 @@ srczap erase
 manages a copy of the HardenedBSD source tree.
 The copy of the source tree is maintained by members of
 the '_srczap' group, and a copy of the source tree
-can be installed to /usr/src/ by root.
+can be installed into /usr/src/ by root.
 .Sh EXAMPLES
 .sp
 .sp
