--- a/man/man8/srczap.8
+++ b/man/man8/srczap.8
@@ -24,7 +24,7 @@ can be installed into /usr/src/ by root.
 .sp
 .Nm srczap clone
 .br
-Clone the hardenedbsd ports tree into /home/_srczap/src/.
+Clone the HardenedBSD source tree into /home/_srczap/src/.
 .br
 This command is delegated to the '_srczap' user.
 .Pp
@@ -53,7 +53,7 @@ This command requires root privileges.
 .br
 The URL to a git repository.
 .br
-Default: https://git.hardenedbsd.org/hardenedbsd/HardenedBSD/
+Default: https://git.HardenedBSD.org/HardenedBSD/HardenedBSD/
 .sp
 .Nm SRCZAP_BRANCH
 .br
