Fix outdated link

--- a/man/man8/srczap.8
+++ b/man/man8/srczap.8
@@ -53,7 +53,7 @@ This command requires root privileges.
 .br
 The URL to a git repository.
 .br
-Default: https://git.HardenedBSD.org/HardenedBSD/HardenedBSD/
+Default: https://git.HardenedBSD.org/HardenedBSD/HardenedBSD.git/
 .sp
 .Nm SRCZAP_BRANCH
 .br
