Rename project (srczap -> sourcezap)

--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -1,68 +1,68 @@
 .Dd May 2023
-.Dt SRCZAP 8
+.Dt SOURCEZAP 8
 .Os
 .Sh NAME
-.Nm srczap
+.Nm sourcezap
 .Nd manages a copy of the HardenedBSD source tree
 .Sh SYNOPSIS
 .br
-srczap clone
+sourcezap clone
 .br
-srczap pull
+sourcezap pull
 .br
-srczap install
+sourcezap install
 .br
-srczap erase
+sourcezap erase
 .Sh DESCRIPTION
-.Nm srczap
+.Nm sourcezap
 manages a copy of the HardenedBSD source tree.
 The copy of the source tree is maintained by members of
-the '_srczap' group, and a copy of the source tree
+the '_sourcezap' group, and a copy of the source tree
 can be installed into /usr/src/ by root.
 .Sh EXAMPLES
 .sp
 .sp
-.Nm srczap clone
+.Nm sourcezap clone
 .br
-Clone the HardenedBSD source tree into /home/_srczap/src/.
+Clone the HardenedBSD source tree into /home/_sourcezap/src/.
 .br
-This command is delegated to the '_srczap' user.
+This command is delegated to the '_sourcezap' user.
 .Pp
-.Nm srczap pull
+.Nm sourcezap pull
 .br
-Pull updates into /home/_srczap/src/.
+Pull updates into /home/_sourcezap/src/.
 .br
-This command is delegated to the '_srczap' user.
+This command is delegated to the '_sourcezap' user.
 .Pp
-.Nm srczap install
+.Nm sourcezap install
 .br
-Install /home/_srczap/src/ into /usr/src/.
+Install /home/_sourcezap/src/ into /usr/src/.
 .br
 This command requires root privileges.
 .Pp
-.Nm srczap erase
+.Nm sourcezap erase
 .br
-Start over: erase /usr/src/ and /home/_srczap/src/.
+Start over: erase /usr/src/ and /home/_sourcezap/src/.
 .br
 This command requires root privileges.
 .br
 .Sh ENVIRONMENT
 .sp
 .sp
-.Nm SRCZAP_GITURL
+.Nm SOURCEZAP_GITURL
 .br
 The URL to a git repository.
 .br
 Default: https://git.HardenedBSD.org/HardenedBSD/HardenedBSD.git/
 .sp
-.Nm SRCZAP_BRANCH
+.Nm SOURCEZAP_BRANCH
 .br
 The git branch to clone and pull updates from.
 .br
 Default: hardened/14-stable/master
 .br
 .sp
-.Nm SRCZAP_INSTALLDIR
+.Nm SOURCEZAP_INSTALLDIR
 .br
 The directory where the ports collection will be installed.
 .br
@@ -70,6 +70,6 @@ Default: /usr/src/
 .sp
 .Sh AUTHORS
 The
-.Nm srczap
+.Nm sourcezap
 utility and this manual page were written by
 0x1eef <0x1eef@protonmail.com>.
