${SOURCEZAP_GITURL} -> ${SOURCEZAP_CLONEURL}

--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -57,7 +57,7 @@ This command requires root privileges.
 .Sh ENVIRONMENT
 .sp
 .sp
-.Nm SOURCEZAP_GITURL
+.Nm SOURCEZAP_CLONEURL
 .br
 The URL to a git repository.
 .br
