--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -10,7 +10,7 @@ sourcezap clone
 .br
 sourcezap pull
 .br
-sourcezap set-branch
+sourcezap checkout
 .br
 sourcezap install
 .br
@@ -36,9 +36,9 @@ Pull updates into /home/_sourcezap/src/.
 .br
 This command is delegated to the '_sourcezap' user.
 .Pp
-.Nm sourcezap set-branch
+.Nm sourcezap checkout
 .br
-Set a branch other than the default: hardened/14-stable/master.
+Checkout a branch other than the default: hardened/14-stable/master.
 .br
 This command is delegated to the '_sourcezap' user.
 .Pp
