sourcezap erase -> sourcezap rm

--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -14,7 +14,7 @@ sourcezap checkout
 .br
 sourcezap install
 .br
-sourcezap erase
+sourcezap rm
 .Sh DESCRIPTION
 .Nm sourcezap
 manages a copy of the HardenedBSD source tree.
@@ -48,9 +48,9 @@ Install /home/_sourcezap/src/ into /usr/src/.
 .br
 This command requires root privileges.
 .Pp
-.Nm sourcezap erase
+.Nm sourcezap rm
 .br
-Start over: erase /usr/src/ and /home/_sourcezap/src/.
+Remove the contents of /usr/src/ and /home/_sourcezap/src/.
 .br
 This command requires root privileges.
 .br
