Match README.md (sourcezap.8)

--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -26,46 +26,46 @@ can be installed into /usr/src/ by root.
 .sp
 .Nm sourcezap clone
 .br
-Clone the HardenedBSD source tree into /home/_sourcezap/src/.
+Clone the HardenedBSD source tree into /home/_sourcezap/src/
 .br
-This command is delegated to the '_sourcezap' user.
+This command is delegated to the '_sourcezap' user
 .Pp
 .Nm sourcezap pull
 .br
-Pull updates into /home/_sourcezap/src/.
+Pull updates into /home/_sourcezap/src/
 .br
-This command is delegated to the '_sourcezap' user.
+This command is delegated to the '_sourcezap' user
 .Pp
 .Nm sourcezap checkout
 .br
-Checkout a branch other than the default: hardened/14-stable/master.
+Checkout a branch other than the default: hardened/14-stable/master
 .br
-This command is delegated to the '_sourcezap' user.
+This command is delegated to the '_sourcezap' user
 .Pp
 .Nm sourcezap install
 .br
-Install /home/_sourcezap/src/ into /usr/src/.
+Install /home/_sourcezap/src/ into /usr/src/
 .br
-This command requires root privileges.
+This command requires root privileges
 .Pp
 .Nm sourcezap rm
 .br
-Remove the contents of /usr/src/ and /home/_sourcezap/src/.
+Remove the contents of /usr/src/ and /home/_sourcezap/src/
 .br
-This command requires root privileges.
+This command requires root privileges
 .br
 .Sh ENVIRONMENT
 .sp
 .sp
 .Nm SOURCEZAP_CLONEURL
 .br
-The URL to a git repository.
+The URL of a git repository
 .br
 Default: https://git.HardenedBSD.org/HardenedBSD/HardenedBSD.git/
 .sp
 .Nm SOURCEZAP_INSTALLDIR
 .br
-The directory where the ports collection will be installed.
+The directory where the ports collection will be installed
 .br
 Default: /usr/src/
 .sp
