--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -6,15 +6,11 @@
 .Nd manages a copy of the HardenedBSD source tree
 .Sh SYNOPSIS
 .br
-sourcezap clone
-.br
-sourcezap pull
-.br
-sourcezap checkout
-.br
-sourcezap install
-.br
-sourcezap rm
+.Nm sourcezap clone
+.Nm sourcezap pull
+.Nm sourcezap checkout
+.Nm sourcezap install
+.Nm sourcezap rm
 .Sh DESCRIPTION
 .Nm sourcezap
 manages a copy of the HardenedBSD source tree.
