Fix typo in man page

--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -61,7 +61,7 @@ Default: https://git.HardenedBSD.org/HardenedBSD/HardenedBSD.git/
 .sp
 .Nm SOURCEZAP_INSTALLDIR
 .br
-The directory where the ports collection will be installed
+The directory where the source tree will be installed
 .br
 Default: /usr/src/
 .sp
