--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -38,15 +38,22 @@ Checkout a branch other than the default: hardened/14-stable/master
 .br
 This command is delegated to the '_sourcezap' user
 .Pp
-.Nm sourcezap install
+.Nm sourcezap sh
 .br
-Install /home/_sourcezap/src/ into /usr/src/
+Run /bin/sh within /home/_sourcezap/src/
 .br
-This command requires root privileges
+This command is delegated to the '_sourcezap' user and
+limited to members of the '_sourcezap' group
 .Pp
 .Nm sourcezap rm
 .br
 Remove the contents of /usr/src/ and /home/_sourcezap/src/
+.br
+This command requires root privileges
+.Pp
+.Nm sourcezap install
+.br
+Install /home/_sourcezap/src/ into /usr/src/
 .br
 This command requires root privileges
 .br
