--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -34,7 +34,7 @@ Reverses the changes made by 'sourcezap setup'
 .br
 This command requires root privileges
 .Pp
-.Sh COMMANDS
+.Sh GENERAL
 .sp
 .sp
 .Nm sourcezap clone
