--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -30,7 +30,7 @@ This command requires root privileges
 .Pp
 .Nm sourcezap teardown
 .br
-Reverses the changes made by 'sourcezap setup'
+Reverse the changes made by 'sourcezap setup'
 .br
 This command requires root privileges
 .Pp
