--- a/share/sourcezap/CHANGELOG
+++ b/share/sourcezap/CHANGELOG
@@ -1,5 +1,9 @@
 * vNEXT
 
+** Add 'libexec/sourcezap/utils/get-umask'
+Add a single source of truth for the mask given to umask
+by git and sourcezap-install
+
 ** Break up 'sourcezap-install' into multiple files
 'libexec/sourcezap/utils/install/' contains files that cover both
 a fresh install and applying an update
