--- a/share/sourcezap/CHANGELOG
+++ b/share/sourcezap/CHANGELOG
@@ -2,8 +2,8 @@
 
 * vNEXT
 
-**** Address ~libexec/sourcezap/scripts/setup-doas~ bug
-This change addresses a bug in ~setup-doas~ that could hang
+**** Fix ~libexec/sourcezap/scripts/setup-doas~ bug
+This change fixes a bug in ~setup-doas~ that could hang
 the ~sourcezap setup~ command
 
 **** Collapse ~libexec/sourcezap/scripts~
@@ -11,10 +11,12 @@ This change does not try to organize script directories that
 go beyond ~libexec/sourcezap/scripts~
 
 **** Add ~libexec/sourcezap/scripts/setup~
-This new directory replaces what was formerly known as ~libexec/sourcezap/setup~
+This new directory replaces what was formerly known
+as ~libexec/sourcezap/setup~
 
 **** Add ~libexec/sourcezap/scripts~
-This new directory replaces what was formerly known as ~libexec/sourcezap/utils~
+This new directory replaces what was formerly known
+as ~libexec/sourcezap/utils~
 
 * v1.1.0
 
