--- a/share/sourcezap/CHANGELOG
+++ b/share/sourcezap/CHANGELOG
@@ -1,6 +1,6 @@
 # -*- mode: org -*-
 
-* vNEXT
+* v1.2.0
 
 **** Fix ~libexec/sourcezap/scripts/setup-doas~ bug
 This change fixes a bug in ~setup-doas~ that could hang
@@ -15,7 +15,7 @@ This new directory replaces what was formerly known
 as ~libexec/sourcezap/setup~
 
 **** Add ~libexec/sourcezap/scripts~
-This new directory replaces what was formerly known
+This new directory rplaces what was formerly known
 as ~libexec/sourcezap/utils~
 
 * v1.1.0
