--- a/share/sourcezap/CHANGELOG
+++ b/share/sourcezap/CHANGELOG
@@ -2,6 +2,10 @@
 
 * vNEXT
 
+**** Format log messages with program name
+This change formats log messages written to standard output
+and standard error with the pattern ~sourcezap: <message>~
+
 **** Replace chmod with -M switch
 This change replaces chmod with the -M switch. The -M switch
 is given to the ~pw useradd~ command in the ~setup-user~
