--- a/share/sourcezap/NEWS
+++ b/share/sourcezap/NEWS
@@ -1,5 +1,11 @@
 # -*- mode: org -*-
 
+* vNEXT
+
+** Remove ~sourcezap checkout~
+Remove the ~sourcezap checkout~ command. It has been replaced
+by using ~sourcezap sh~ alongside ~git checkout <branch>~
+
 * v1.2.1
 
 ** Create ~doas.conf~ if neccessary
