Add 'sourcezap sh' to the man page

--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -10,6 +10,7 @@
 .Nm sourcezap teardown
 .Nm sourcezap clone
 .Nm sourcezap pull
+.Nm sourcezap sh
 .Nm sourcezap install
 .Nm sourcezap rm
 .Sh DESCRIPTION
