--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -75,7 +75,7 @@ This command requires root privileges
 .br
 The URL of a git repository
 .br
-Default: https://git.HardenedBSD.org/HardenedBSD/HardenedBSD.git/
+Default: https://github.com/HardenedBSD/HardenedBSD.git/
 .sp
 .Nm SOURCEZAP_INSTALLDIR
 .br
