Mention 'pw groupmod' in the man page

--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -34,6 +34,12 @@ Reverse the changes made by 'sourcezap setup'
 .br
 This command requires root privileges
 .Pp
+.Nm pw groupmod _sourcezap -m <user>
+.br
+Append a user to the '_sourcezap' group
+.br
+This command requires root privileges
+.Pp
 .Sh GENERAL
 .sp
 .sp
