Mention limitations in sourcezap.8

--- a/man/man8/sourcezap.8
+++ b/man/man8/sourcezap.8
@@ -47,13 +47,15 @@ This command requires root privileges
 .br
 Clone the HardenedBSD source tree into /home/_sourcezap/src/
 .br
-This command is delegated to the '_sourcezap' user
+This command is delegated to the '_sourcezap' user and
+limited to members of the '_sourcezap' group
 .Pp
 .Nm sourcezap pull
 .br
 Pull updates into /home/_sourcezap/src/
 .br
-This command is delegated to the '_sourcezap' user
+This command is delegated to the '_sourcezap' user and
+limited to members of the '_sourcezap' group
 .Pp
 .Nm sourcezap sh
 .br
